# EDA_TRABALHO_1_PART_2

./: CMakeLists.txt  README.md
include/: avl_node.h  avl_utils.h
src/: avl_node.c  main.c
test/: avl_test.c
